fix: font display on firefox (faulty raleway font)

--- a/assets/styles/_fonts.scss
+++ b/assets/styles/_fonts.scss
@@ -2,41 +2,28 @@
   font-family: "Addington";
   src: url("~@/assets/fonts/addingtoncf-bold-webfont.woff2") format("woff2");
   font-weight: bold;
-  font-style: normal;
-  font-display: swap;
 }
 @font-face {
   font-family: "Addington";
   src: url("~@/assets/fonts/addingtoncf-bolditalic-webfont.woff2") format("woff2");
   font-weight: bold;
   font-style: italic;
-  font-display: swap;
 }
 @font-face {
   font-family: "Addington";
   src: url("~@/assets/fonts/addingtoncf-thin-webfont.woff2") format("woff2");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
 }
 @font-face {
   font-family: "Addington";
   src: url("~@/assets/fonts/addingtoncf-thinitalic-webfont.woff2") format("woff2");
-  font-weight: normal;
   font-style: italic;
-  font-display: swap;
 }
 @font-face {
   font-family: "Raleway";
   src: url("~@/assets/fonts/Raleway-Bold.woff2") format("woff2");
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
+  font-weight: 700;
 }
 @font-face {
   font-family: "Raleway";
   src: url("~@/assets/fonts/Raleway-Medium.woff2") format("woff2");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
 }
